--- a/css/style.css
+++ b/css/style.css
@@ -229,27 +229,7 @@ justify-content: center;
   
 }
     /* ------------------------------end quiz form style-------- */
-.arrow-up{
-  position: sticky;
-  top: 0;
-  float: right;
-  border-radius: 10px;
-  height: 40px;
-  width: 40px;
-  background-color:#4361ee;
-  opacity: .4;
-  z-index: -1;
-  margin-right: 10px;
-  font-size: 1.5rem;
-}
-.arrow-up a{
-  color: azure;
-  display: block;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  padding: 20% 0;
-}
+
 /* ----------------------------------start floated images section------------- */
  .container {
    width: 90%;
@@ -553,8 +533,28 @@ padding: 5%;
 }
 
 
-      /* - ----------------------------------highlights section----------------------- -- */
-
+      /* - ----------------------------------end highlights section----------------------- -- */
+      .arrow-up{
+        position: sticky;
+        bottom: 0;
+        float: right;
+        border-radius: 10px;
+        height: 40px;
+        width: 40px;
+        background-color:#4361ee;
+        opacity: .4;
+        z-index: -1;
+        margin-right: 10px;
+        font-size: 1.5rem;
+      }
+      .arrow-up a{
+        color: azure;
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        padding: 20% 0;
+      }
 
 
         /* -------------------start footer---------------- */
@@ -689,6 +689,10 @@ color: azure;
     .space{
       height: 100px;
     }
+    .border{
+      border: 2px solid#fff;      
+      box-shadow:0 7.5px 20px rgba(0,0,0,.3);    
+    }
     /* -----start navbar editing------ */
     .navbar{
       flex-direction: column;
@@ -760,7 +764,9 @@ color: azure;
    /* ------------------end---------------------------- --------- */
    /* ------------------coding quiz form-------------------------------- */
    .quiz-form{
-    top:1%;
+    top:2%;
+    width:100%;
+    left: 0%;
   }
    .questions{
     padding: 5px;
@@ -777,6 +783,15 @@ color: azure;
 
    /* --------------------end--------------- */
    /* -------------------------- editing floated images section--------------- */
+   .container p{
+     clear: both;
+   }
+   .container p>img{
+    width: 80%;
+    margin: 10%;
+
+    
+     }
    .quotation p::first-letter{
     font-size: 30px;
     font-weight: 600;
@@ -798,8 +813,8 @@ color: azure;
   }
   .lake-image img{
   
-    width: 60%;
-    margin: 10% 20%;
+    width: 80%;
+    margin: 10% ;
     height: 40%;
     
  
