--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ padding: 5%;
 }
 
 
-.wraper .box:hover .card-cover {
+.wraper .box:hover .card-cover, .wraper .box:focus .card-cover {
   height: 10%;
   opacity: 0;
   
