--- a/css/style.css
+++ b/css/style.css
@@ -844,11 +844,12 @@ color: azure;
     }
     /* ---------------------- end-------------------- */ 
     .card-text{
-      /* color: #5e60ce; */
+      color: #5e60ce;
       font-weight: 700;
     }
     .card1 , .card2, .card3 , .card4{
       filter: blur(0px);
     }
-    .card-cover{display: none;}
+    .card-cover{display: none;
+    }
   }
