--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ justify-content: center;
   text-align: justify;
 width: 90%;
 height: 100%;
-  line-height:1.5em;
+  /* line-height:1.5em; */
   overflow: hidden;
   margin: auto;
  
@@ -515,12 +515,18 @@ position: absolute;
 bottom: 0;
 height: 20%;
 width: 100%;
-background-color:#fff;
-opacity: .4;
+background-color:rgba(245, 234, 234, 0.4);
+/* opacity: .4; */
 z-index: -6;
+display: flex;
+align-items: center;
+justify-content: start;
+padding: 5%;
+color: azure;
+text-transform: capitalize;
 
 }
-.title-text{
+/* .title-text{
 position: absolute;
 bottom: 0;
  z-index: -5;
@@ -531,7 +537,7 @@ align-items: center;
 justify-content: start;
 padding: 5%;
 color: azure;
-}
+} */
 
 
 .wraper .box:hover .card-cover {
