--- a/css/style.css
+++ b/css/style.css
@@ -500,10 +500,11 @@ border-radius: 10px;
 .card-text{
   z-index: -8;
   position: relative;
-  height: 100%;
+  height: 80%;
   width: 100%;
   color: azure;
   padding:5%;
+  font-size: 1rem;
 }
 .card-cover{
   position: absolute;
@@ -636,8 +637,73 @@ color: azure;
 
 
                  /* -------------------------------media quiries------------------- */
-
-  @media (max-width: 768px){
+                 @media all and (max-width: 1350px){
+                  .lake-container{
+                    flex-direction: column;
+                  }
+                  .lake-text1 ,.lake-text2{
+                    width: 90%;
+                    margin: auto;
+                  }
+                  .lake-image{
+                   width: 100%;
+                 
+                 }
+                 .lake-image img{
+                 
+                   width: 60%;
+                   margin: 10% 20%;
+                   height: 40%;
+                   }
+                   .card-text{
+                    font-size: 0.8rem;
+                  } 
+                  }
+    @media all and (max-width: 850px){
+    /* .lake-container{
+      flex-direction: column;
+    }
+    .lake-text1 ,.lake-text2{
+      width: 90%;
+      margin: auto;
+    }
+    .lake-image{
+     width: 100%;
+   
+   }
+   .lake-image img{
+   
+     width: 60%;
+     margin: 10% 20%;
+     height: 40%;
+     } */
+     .card-text{
+      font-size: 0.8rem;
+    } 
+    }
+  @media all and (max-width: 850px){
+    .lake-container{
+      flex-direction: column;
+    }
+    .lake-text1 ,.lake-text2{
+      width: 90%;
+      margin: auto;
+    }
+    .lake-image{
+     width: 100%;
+   
+   }
+   .lake-image img{
+   
+     width: 60%;
+     margin: 10% 20%;
+     height: 40%;
+     }
+     .card-text{
+      font-size: 0.8rem;
+    } 
+    }
+  @media all and (max-width: 768px){
     .head-fontsize{
       font-size: 1.5rem;
     }
@@ -843,11 +909,17 @@ color: azure;
  
   }
   /* ----------------------end editing lake section------------------- */
+  /* ----------------heiglights editing-------------- */
   .wraper .box{
     position: relative;
     width: 80%;
     margin: 10%;
   }
+  .card-text{
+    font-size: 0.8rem;
+  }
+  .card-title{
+    height: 15%;}
   
      /* ----------------------editing bubbles size & bubbles section---------------- */
      .seals{
